--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
-    <title>Exercise</title>
+    <link rel="icon" href="BP logo.jpg">
+    <title>Welcome to BLACKPINK World</title>
 </head>
 <body>
     <header>
@@ -15,8 +16,8 @@
                 <li class="list">HOME</li>
                 <li class="list">ABOUT</li>
                 <li class="list">SERVICES</li>
-                <li class="list">TESTIMONIALS</li>
-                <li class="list">Contact</li>
+                <a href="PicPage.html"><li class="list">PICTURES</li></a>
+                <li class="list last">Contact</li>
             </ul>
         </nav>
     </header>
